--- a/styles/style.css
+++ b/styles/style.css
@@ -1,38 +1,295 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
+:root {
+    --white-color: #fff;
+    --dark-color: #1b1919;
+    --gray-color: #545050;
+}
+
+:where(*,*::before,*::after) {
+    box-sizing: border-box;
+    font-family: 'Fira Sans Condensed', Arial, sans-serif;
 }
 
 html {
-  block-size: 100%;
+    block-size: 100%;
+}
+
+:where(h1, h2, h3, h4, p, ul, ol, li, blockquote, fieldset) {
+    margin: 0;
+    padding: 0;
+}
+
+:where(ul, ol) {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+@layer components, variations;
+
+@layer components {
+    .button {
+        border: 1px solid var(--white-color);
+        background: transparent;
+        font-size: 1.125rem;
+        color: var(--white-color);
+        font-weight: 700;
+        padding: .375rem 0;
+        cursor: pointer;
+    }
+
+    .button:hover {
+        text-decoration-line: underline;
+        text-underline-offset: 2px;
+        text-decoration-thickness: 0;
+    }
+}
+
+.visually-hidden {
+    position: absolute;
+    inline-size: 1px;
+    block-size: 1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    white-space: nowrap;
+}
+
+:where(.button,.search-form__textfield,.search-form__label,.content__card-link):is(:focus) {
+    outline: none;
+}
+
+
+:where(.button,.search-form__textfield,.search-form__label,.content__card-link):is(:focus-visible) {
+    outline-offset: 1px;
+    outline: 1px solid var(--white-color);
+}
+
+:where(.button:active,.content__card-link_current,.content__card-link:active) {
+    background: var(--gray-color);
 }
 
 .page {
-  inline-size: 1200px;
-  block-size: 100%;
-  margin: auto;
-  color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-size: 18px;
-  background-color: #1b1919;
+    inline-size: 1200px;
+    block-size: 100%;
+    margin: auto;
+    color: var(--white-color);
+    font-size: 18px;
+    background-color: var(--dark-color);
+    display: flex;
+    place-content: center;
+    align-items: center;
 }
 
-h1,
-h2,
-h3,
-h4,
-p,
-ul,
-ol,
-li,
-blockquote,
-fieldset {
-  margin: 0;
-  padding: 0;
+@media screen and (max-width: 1199px) {
+    .page {
+        width: 100%;
+        height: auto;
+    }
 }
 
-ul,
-ol {
-  list-style: none;
+.content {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    max-width: 1140px;
+    gap: 1.875rem;
+}
+
+.result {
+    align-self: flex-end;
+}
+
+.result__video-container {
+    width: 711px;
+    height: 386px;
+    margin-bottom: 1rem;
+    position: relative;
+}
+
+.result__video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.search-form {
+    display: flex;
+    align-items: flex-start;
+    gap: 2.5rem;
+}
+
+.search-form__fieldset {
+    border: none;
+    width: fit-content;
+}
+
+.search-form__fieldset-title {
+    font-size: 1.125rem;
+    line-height: normal;
+    margin-bottom: .375rem;
+    font-weight: 400;
+}
+
+.search-form__label {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: .375rem;
+}
+
+.search-form__label-text:hover {
+    text-decoration-line: underline;
+    text-underline-offset: 2px;
+    text-decoration-thickness: 0;
+}
+
+.search-form__textfield {
+    background: transparent;
+    border: 1px solid transparent;
+    border-top-color: var(--white-color);
+    border-bottom-color: var(--white-color);
+    color: rgba(255, 255, 255, 0.70);
+    font-size: 1.125rem;
+    min-width: 225px;
+    appearance: none;
+}
+
+.search-form__textfield:focus-visible {
+    outline: 1px solid var(--white-color);
+    outline-offset: 1px;
+}
+
+.search-form__textfield:active {
+    outline: none;
+    border-color: var(--white-color);
+}
+
+.search-form__checkbox-list {
+    display: flex;
+    grid-gap: .95rem;
+}
+
+.search-form__label:has(:focus) {
+    outline: none;
+}
+
+@supports not selector(:has(:focus)) {
+    .search-form__label:focus {
+        outline: none;
+        background: inherit;
+    }
+}
+
+.search-form__label:has(:focus-visible) {
+    outline: 1px solid var(--white-color);
+    outline-offset: 1px;
+    background: inherit;
+}
+
+@supports not selector(:has(:focus-visible)) {
+    .search-form__label:focus-visible {
+        outline: 1px solid var(--white-color);
+        outline-offset: 1px;
+        background: inherit;
+    }
+}
+
+.search-form__pseudo-checkbox {
+    width: 19px;
+    height: 19px;
+    padding: 1px;
+    border: 1px solid var(--white-color);
+}
+
+.search-form__checkbox[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: var(--white-color);
+}
+
+@layer variations {
+    .search-form__submit-button {
+        align-self: flex-end;
+        min-width: 194px;
+    }
+}
+
+.content__details {
+    width: 100%;
+    height: 100%;
+}
+
+.content__details .title {
+    color: var(--white-color);
+    font-family: Oswald, Arial, sans-serif;
+    font-size: 4.6875rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 94%;
+    text-transform: uppercase;
+    margin-bottom: 1.25rem;
+}
+
+.content__details .content__accent {
+    color: var(--gray-color);
+    font-family: inherit;
+}
+
+.content__list {
+    max-height: 300px;
+    overflow-y: auto;
+    position: relative;
+}
+
+.content__list::-webkit-scrollbar {
+    width: 0;
+}
+
+.content__list-item:not(:last-of-type) {
+    margin-bottom: 2rem;
+}
+
+@layer variations {
+    .more-button {
+        margin: 2px;
+        width: calc(100% - 4px);
+    }
+}
+
+.content__card-link {
+    display: block;
+    color: var(--white-color);
+    margin: 0.125rem;
+}
+
+.content__video-card {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: .125rem 0 .125rem .125rem;
+}
+
+.content__video-card-description-container {
+    width: calc(100% - 194px - 1rem);
+}
+
+.content__video-card-title {
+    font-family: Oswald, Arial, sans-serif;
+    font-size: 1.875rem;
+    font-weight: 700;
+    line-height: 100%;
+    text-transform: uppercase;
+    padding: .125rem 0 .25rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.content__video-card-thumbnail {
+    width: 194px;
+    height: 103px;
 }
